import React from 'react';
import renderer from 'react-test-renderer';
import Providers from '../Providers';

import FeaturedCard from '.';

describe('FeaturedCard', () => {
  it('should render', () => {
    const tree = renderer.create(
      <Providers>
        <FeaturedCard
          title={
            'Are you telling me that you built a time machine out of a DeLorean?'
          }
          image={[
            {
              uri: 'https://picsum.photos/800/1600/?random',
            },
          ]}
        />
      </Providers>
    );
    expect(tree).toMatchSnapshot();
  });
  it('should render with a description', () => {
    const tree = renderer.create(
      <Providers>
        <FeaturedCard
          title={
            'Are you telling me that you built a time machine out of a DeLorean?'
          }
          image={[
            {
              uri: 'https://picsum.photos/800/1600/?random',
            },
          ]}
          description={
            'The way I see it, if you’re going to build a time machine into a car, why not do it with some style?'
          }
        />
      </Providers>
    );
    expect(tree).toMatchSnapshot();
  });
});
